# clube-da-copa-chatbot

./: README.md  app.py  codigoMain.txt  conversa.py  copasAnteriores.py  curiosidades.py  curiosidadesCopa.py  curiosidadesJogadores.py  database.sqlite3  database.sqlite3-shm  database.sqlite3-wal  filters.py  fly.toml  horarioJogos.py  jogadores.py  main.py  pyproject.toml  rascunho.txt  requirements.txt  telaInicio.py  tempoReal.py
static/css/: style.css
templates/: home.html  index.html
