[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clube_da_copa_chatbot_Poliana"
version = "0.0.1"
authors = [
  { name="Poliana Souza", email="polysantos88@gmail.com" },
]
description = "Um chatbot sobre a copa do mundo de 2022"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PolianaSouza/clube-da-copa-chat"